--- a/src/assets/layout/_core.scss
+++ b/src/assets/layout/_core.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: var(--text-color);
     background-color: var(--surface-ground);
     margin: 0;
