--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -3,3 +3,18 @@
 @use '@/assets/tailwind.css';
 @use '@/assets/layout/layout.scss';
 @use '@/assets/demo/demo.scss';
+
+:root {
+  --p-primary-color: #006fbe!important; /* Tailwind blue-600 */
+  --p-primary-50: #eff6ff !important;
+  --p-primary-100: #dbeafe !important;
+  --p-primary-200: #bfdbfe !important;
+  --p-primary-300: #93c5fd !important;
+  --p-primary-400: #60a5fa !important;
+  --p-primary-500: #3b82f6 !important;
+  --p-primary-600: #2563eb !important;
+  --p-primary-700: #1d4ed8 !important;
+  --p-primary-800: #1e40af !important;
+  --p-primary-900: #1e3a8a !important;
+}
+
