--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -5,16 +5,17 @@
 @use '@/assets/demo/demo.scss';
 
 :root {
-  --p-primary-color: #006fbe!important; /* Tailwind blue-600 */
-  --p-primary-50: #eff6ff !important;
-  --p-primary-100: #dbeafe !important;
-  --p-primary-200: #bfdbfe !important;
-  --p-primary-300: #93c5fd !important;
-  --p-primary-400: #60a5fa !important;
-  --p-primary-500: #3b82f6 !important;
-  --p-primary-600: #2563eb !important;
-  --p-primary-700: #1d4ed8 !important;
-  --p-primary-800: #1e40af !important;
-  --p-primary-900: #1e3a8a !important;
+  --p-primary-50:  #e6f3fb !important;
+  --p-primary-100: #cce7f7 !important;
+  --p-primary-200: #99cff0 !important;
+  --p-primary-300: #66b7e8 !important;
+  --p-primary-400: #006fbe !important; /* Main TOYO Blue */
+  --p-primary-500: #0063ab !important;
+  --p-primary-600: #00589a !important;
+  --p-primary-700: #004c87 !important;
+  --p-primary-800: #004276 !important;
+  --p-primary-900: #00345d !important;
+  --p-primary-color: var(--p-primary-400) !important;
 }
+
 
