--- a/src/assets/layout/_responsive.scss
+++ b/src/assets/layout/_responsive.scss
@@ -12,13 +12,10 @@
         &.layout-overlay {
             .layout-main-container {
                 margin-left: 0;
-                padding-left: 2rem;
             }
 
             .layout-sidebar {
-                transform: translateX(-100%);
-                left: 0;
-                top: 0;
+                transform: translateX(-110%);
                 height: 100vh;
                 border-top-left-radius: 0;
                 border-bottom-left-radius: 0;
@@ -40,19 +37,17 @@
         }
 
         &.layout-static {
-            .layout-main-container {
-                margin-left: 22rem;
-            }
+
 
             &.layout-static-inactive {
                 .layout-sidebar {
-                    transform: translateX(-100%);
+                    width: 0;
+                    padding: 0;
                     left: 0;
                 }
 
                 .layout-main-container {
                     margin-left: 0;
-                    padding-left: 2rem;
                 }
             }
         }
@@ -75,9 +70,8 @@
         }
 
         .layout-sidebar {
-            transform: translateX(-100%);
-            left: 0;
-            top: 0;
+            position: fixed;
+            transform: translateX(-110%);
             height: 100vh;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
