--- a/src/assets/layout/_topbar.scss
+++ b/src/assets/layout/_topbar.scss
@@ -1,9 +1,9 @@
 @use 'mixins' as *;
 
 .layout-topbar {
-    position: fixed;
     height: 4rem;
     z-index: 997;
+    flex-shrink: 0;
     left: 0;
     top: 0;
     width: 100%;
