--- a/src/assets/layout/_core.scss
+++ b/src/assets/layout/_core.scss
@@ -1,16 +1,13 @@
-html {
+html,body {
     height: 100%;
     font-size: 14px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     line-height: 1.2;
-}
-
-body {
     font-family: 'Open Sans', sans-serif;
     color: var(--text-color);
     background-color: var(--surface-ground);
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -20,5 +17,8 @@ a {
 }
 
 .layout-wrapper {
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
 }
