--- a/src/assets/layout/_menu.scss
+++ b/src/assets/layout/_menu.scss
@@ -1,14 +1,12 @@
 @use 'mixins' as *;
 
 .layout-sidebar {
-    position: fixed;
+    flex-shrink: 0;
+    overflow-y: auto;
     width: 20rem;
-    height: calc(100vh - 8rem);
     z-index: 999;
     overflow-y: auto;
     user-select: none;
-    top: 6rem;
-    left: 2rem;
     transition:
         transform var(--layout-section-transition-duration),
         left var(--layout-section-transition-duration);
